# z03mmc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TLSR825xComFlasher.py  TODO
.github/workflows/: build-windows.yml  build.yml
assets/: 1141-0203-99993001-ATC_v46.zigbee  db15-0203-99993001-ATC_v46.zigbee
cmake/: TelinkSDK.cmake
converters/: lywsd03mmc-legacy-z2m.js  lywsd03mmc.js  vindriktning.js
src/: CMakeLists.txt  app_cfg.h  app_i2c.c  app_i2c.h  app_ui.c  app_ui.h  battery.c  battery.h  board_8258_03mmc.h  board_8258_dongle.h  board_8258_evk.h  board_8258_evk_v1p2.h  board_lywsd03mmc.h  board_mjwsd05mmc.h  device.c  device.h  lcd.c  lcd.h  pm1006.c  pm1006.h  reporting.c  reporting.h  sampleSensor.c  sampleSensorEpCfg.c  sensor.c  sensor.h  sensorEpCfg.c  shtv3_sensor.c  shtv3_sensor.h  stack_cfg.h  version_cfg.h  zb_appCb.c  zcl_relative_humidity.c  zcl_relative_humidity.h  zcl_relative_humidity_attr.c  zcl_sampleSensorCb.c  zcl_sensorCb.c
src/bootLoader/: app_cfg.h  board_8258_dongle.h  board_8258_evk.h  board_8258_evk_v1p2.h  board_826x_dongle.h  board_826x_evk.h  board_8278_dongle.h  board_8278_evk.h  board_9518_dongle.h  board_9518_evk.h  bootloader.c  bootloader.h  main.c  version_cfg.h
src/common/: comm_cfg.h  factory_reset.c  factory_reset.h  firmwareEncryptChk.c  firmwareEncryptChk.h  main.c  module_test.c
src/custom_zcl/: zcl_concentration.c  zcl_concentration.h  zcl_relative_humidity.c  zcl_relative_humidity.h  zcl_relative_humidity_attr.c  zcl_thermostat_ui_cfg.c  zcl_thermostat_ui_cfg.h
tools/: make_ota.py  tl_check_fw.py
